# nyc_taxi_demand_prediction

./: README.md  pyproject.toml
.github/workflows/: feature_pipeline.yaml  feature_pipeline.yml
notebooks/: 01_fetch_data.ipynb  02_validate_and_save.ipynb  05_transform_raw_data_into_features_and_targets.ipynb  06_visualization.ipynb  07_baseline_models.ipynb  08_xgboost_model.ipynb  09_lightgbm_model.ipynb  10_lgm_with_fe.ipynb  11_lgm_hyper.ipynb  12_load_features_hopsworks.ipynb  13_feature_pipeline.ipynb  Untitled.ipynb  set_environment.ipynb
src/: experiment_utils.py
